tests/ui/imports/private-import-suggestion-path-156244-edition2015.rs
//@ edition: 2015

mod one {
    pub struct One();
}

mod two {
    use one::One;
}

mod test {
    use two::One;
    //~^ ERROR struct import `One` is private [E0603]
}

fn main() {}
